# haskell_book

./: .gitignore  some_solution_repos  stack_notes.org
ch10/: foldprac.hs
ch11/: BinTree.hs  CipherEx.hs  DeConstruct.hs  ExPg455.hs  Hutton.hs  PhoneEx.hi  PhoneEx.hs  SumProd.hs  TypePrac.hs
ch12/: ChExBinary.hs  ChExEither.hs  ChExMaybe.hs  ChExNaturalNumber.hs  ChExStringProc.hs  ChExUnfold.hs  ChExValidateWord.hs
ch13/: Main.hs  Pg512.hs
ch13/hangman/: LICENSE  hangman.cabal  hangman.cabal.save  package.yaml
ch13/hangman/app/: Main.hs
ch13/hangman/src/: HangmanLib.hs
ch13/hangman/test/: Spec.hs
ch14/chpt-ex/: .gitignore  ChangeLog.md  README.md  package.yaml
ch14/chpt-ex/app/: Main.hs
ch14/chpt-ex/src/: WordNumber.hs
ch14/chpt-ex/test/: Spec.hs
ch14/chpt-qc/: .gitignore  ChangeLog.md  README.md  package.yaml
ch14/chpt-qc/app/: Main.hs
ch14/chpt-qc/src/: Lib.hs
ch14/chpt-qc/test/: Spec.hs
ch14/hspec-ex/: Addition.hi  Addition.hs  addition.cabal
ch14/morse/: package.yaml
ch14/morse.tmp/: package.yaml
ch14/morse/app/: Main.hs
ch14/morse/src/: Morse.hs
ch14/morse/test/: Spec.hs
ch15/: DataTypeTry.hs  ExPg598.hi  ExPg598.hs  ExPg605.hs
ch15/ChptEx/: ChptEx.cabal  LICENSE
ch15/ChptEx/src/: Lib.hs
ch15/ChptEx/test/: Spec.hs
ch15/InlineEx/: InlineEx.cabal
ch15/InlineEx/src/: Listly.hs  ListlyInstances.hs  MadLib.hs  Pg598.hs
ch15/InlineEx/test/: Spec.hs
ch16/: Days.hs  DummyClass.hs  ExPg178.hs  ExPg657.hi  ExPg657.hs  Main.hs  ReplaceExperiment.hs  notes.org
ch16/InlineEx/src/: Lib.hs
ch17/ChptEx/: package.yaml
ch17/ChptEx/app/: Main.hs
ch17/ChptEx/src/: ChLib.hs  ComboLib.hs
ch17/ChptEx/test/: Spec.hs
ch17/InlineEx/: package.yaml
ch17/InlineEx/app/: Main.hs
ch17/InlineEx/src/: Lib.hs  ListApplicative.hs  Pg707.hs
ch17/InlineEx/test/: Spec.hs
ch18/ChptEx/: ChptEx.cabal
ch18/ChptEx/src/: Main.hs
ch18/InlineEx/: package.yaml
ch18/InlineEx/app/: Main.hs
ch18/InlineEx/src/: BadMonad.hs  Lib.hs  MonadComposition.hs
ch19/: TODO
ch2/: RewriteLetToWhere.hs  SayHello.hs
ch20/ChptEx/src/: Lib.hs
ch20/InLineEx/: .gitignore  README.md  package.yaml
ch20/InLineEx/src/: Pg836.hs
ch21/ChptEx/: package.yaml
ch21/InLineEx/: ChangeLog.md
ch24/Aeson/: Aeson.cabal
ch24/Aeson/src/: Main.hs
ch24/BT/: BT.cabal
ch24/BT/src/: Main.hs
ch24/ChptEx/: package.yaml
ch24/ChptEx/app/: Main.hs
ch24/ChptEx/src/: Ex1.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex5.hs  Ex5Data.hs  Ex6.hs  Ex7.hs
ch24/ChptEx/test/: Spec.hs
ch24/ConfigParser/: package.yaml
ch24/ConfigParser/app/: Main.hs
ch24/InlineEx/: package.yaml
ch24/InlineEx/app/: Main.hs
ch24/InlineEx/src/: AltParsing.hs  LearnParsers.hs
ch24/PolyParser/: .gitignore  package.yaml
ch24/PolyParser/app/: Main.hs
ch3/: GlobalLocal.hs  print2.hs  print3.hs
ch4/: Mood.hs
ch5/: Arith3Broken.hi  Arith3Broken.hs  DetermineTheType.hs  Sing.hs  myMax.hs  typeInference.hs
ch5/Ex3/: Main.hi  Main.hs  arith.cabal
ch7/: Arith4.hs  Ch7Ex.hs
ch8/: Exercises.hs  WordNumber.hs
ch9/: Cipher.hs
docs/: bytestring.txt  data.list.txt  data.map.txt  quickcheck.txt
haskell_class/: SumType.hs  arith4.hs  fakedb.hs  mfam.hs  mybind.hs  myfolds.hs  myfoldtest.hs  mywords.hs  recurse.hs  sayhello.hs  wordnumber.hs
hello/: hello.cabal  stack.yaml
hello/exe/: Main.hs
hello/src/: DogsRule.hs  Hello.hs
(+7 files in other folders)
