name:                InlineEx
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nail82/InlineEx#readme
license:             BSD3
license-file:        LICENSE
author:              Ted Satcher
maintainer:          ted.satcher@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pg598,Listly,ListlyInstances,MadLib
  build-depends:       base >= 4.7 && < 5, QuickCheck
  default-language:    Haskell2010

test-suite inline-ex-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test,src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  other-modules: Pg598
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , InlineEx

source-repository head
  type:     git
  location: https://github.com/nail82/InlineEx
