name:                ChptEx
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nail82/ChptEx#readme
license:             BSD3
license-file:        LICENSE
author:              Ted Satcher
maintainer:          ted.satcher@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ChptEx
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , checkers
                       , QuickCheck